# renju_minmax

./: .gitignore  CMakeLists.txt  README.md  makefile
inc/: evaluate.h  game.h  global.h  minmax.h  node.h  referee.h  renju.h  state.h  thread_pool.h  utils.h
src/: evaluate.c  game.c  minmax.c  node.c  referee.c  renju.c  state.c  thread_pool.c  utils.c
